--- a/WatchOS2-NewAPI-CoreMotion-CMPedometer-Example WatchKit App/Base.lproj/Interface.storyboard
+++ b/WatchOS2-NewAPI-CoreMotion-CMPedometer-Example WatchKit App/Base.lproj/Interface.storyboard
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6221" systemVersion="13E28" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8092"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="WatchOS2_NewAPI_CoreMotion_CMPedometer_Example_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <group width="1" alignment="left" id="bI5-BY-aSI">
+                            <items>
+                                <label alignment="left" text="Steps" id="3Nx-Xr-XUf">
+                                    <fontDescription key="font" style="UICTFontTextStyleBody"/>
+                                </label>
+                                <label alignment="right" text="3298" id="mJO-9W-oud"/>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="UKq-7i-Anb">
+                            <items>
+                                <label alignment="left" text="Floors Asc." id="Q2g-WX-AL9"/>
+                                <label alignment="right" text="2" id="sca-6h-CNI"/>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="tS9-i7-PWc">
+                            <items>
+                                <label alignment="left" text="Floors Des." id="J0y-nA-Gpx"/>
+                                <label alignment="right" text="4" id="hND-yG-gqy"/>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="Vu6-pp-Y8Q">
+                            <items>
+                                <label alignment="left" text="Distance" id="hQc-TA-NJR"/>
+                                <label alignment="right" text="2.51kms" id="dep-an-y5H"/>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="d29-xr-m59">
+                            <items>
+                                <label alignment="left" text="Cadence" id="aOy-0l-llM"/>
+                                <label alignment="right" text="1.1m/s" id="DmV-ci-rKX"/>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="kcI-w6-K7N">
+                            <items>
+                                <label alignment="left" text="Pace" id="l1K-xp-JsC"/>
+                                <label alignment="right" text="0.7s/m" id="n9E-bi-vwJ"/>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="cadenceCount" destination="DmV-ci-rKX" id="4Qz-mc-2dO"/>
+                        <outlet property="cadenceLbl" destination="aOy-0l-llM" id="WNv-Pg-ozn"/>
+                        <outlet property="distanceCount" destination="dep-an-y5H" id="CGw-GA-RfR"/>
+                        <outlet property="distanceLbl" destination="hQc-TA-NJR" id="5Gp-Qp-i81"/>
+                        <outlet property="floorsAscCount" destination="sca-6h-CNI" id="XCa-8E-l99"/>
+                        <outlet property="floorsAscLbl" destination="Q2g-WX-AL9" id="0aM-sL-bVp"/>
+                        <outlet property="floorsDesCount" destination="hND-yG-gqy" id="BVK-P6-mvD"/>
+                        <outlet property="floorsDesLbl" destination="J0y-nA-Gpx" id="5hr-L4-JJm"/>
+                        <outlet property="paceCount" destination="n9E-bi-vwJ" id="Y7Z-wW-yGi"/>
+                        <outlet property="paceLbl" destination="l1K-xp-JsC" id="jgD-NQ-ITc"/>
+                        <outlet property="stepsCount" destination="mJO-9W-oud" id="wn8-4Y-xCp"/>
+                        <outlet property="stepsLbl" destination="3Nx-Xr-XUf" id="V1P-kz-Mgq"/>
+                    </connections>
+                </controller>
             </objects>
         </scene>
     </scenes>
